[package]
name = "an_emergency_supply_distribution_problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defer = "0.1.0"
genevo = "0.7"
rand = "0.8.5"
xlsxwriter = "^0.6"

[dependencies.uuid]
version = "^1.3"
features = [
  "v4",
  "fast-rng",
]

[dependencies.clap]
version = "^4.3"
features = [
  "derive",
]
